	of objects for readtable case values
	* sequence.d (SUBSEQ, COERCED-SUBSEQ, REDUCE, FILL, REPLACE)
	(seq_prepare_testop, seq_prepare_filterop, seq_duplicates, find_op)
	(position_op, count_op, MISMATCH, SEARCH, stable_sort)
	(READ-CHAR-SEQUENCE, WRITE-CHAR-SEQUENCE, READ-BYTE-SEQUENCE)
	(WRITE-BYTE-SEQUENCE): use symbols instead of objects for START/END

2008-02-27  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c use S(K...) instead of `...` for
	common keywords
	(copy_method_t): move before DEFMODULE for DEFCHECKER to work
	(check_copy_method): replace with a DEFCHECKER
	(copy_method_object): remove

2008-02-26  Sam Steingold  <sds@gnu.org>

	* modules/wildcard/Makefile.in (all): depend on wildcard.fas
	* modules/oracle/Makefile.in (all): depend on oracle.fas
	* modules/fastcgi/Makefile.in (all): depend on fastcgi.fas
	* modules/bindings/glibc/Makefile (all): depend on linux.fas
	* modules/postgresql/Makefile.in (all): depend on postgresql.fas

2008-02-26  Sam Steingold  <sds@gnu.org>

	a less invasive work-around for bug #[ 1413016 ]:
	it is not amd64 which is at fault, but TYPECODES
	* makemake.in (XCFLAGS): revert the 2007-10-15 patch
	* spvw_garcol.d (update) [TYPECODES]: comment out DEBUG_SPVW_ASSERT
	(gc_unmarkcheck) [TYPECODES]: disable

2008-02-26  Sam Steingold  <sds@gnu.org>

	* spvw_debug.d (DEBUG_SPVW_ASSERT): print the failed assertion
	before abort() both as is and with expanded macros

2008-02-25  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (src/m4/gtk-2.0.m4): use wget instead of svn
	* autogen.sh: svn is no longer required, let us keep it this way!

2008-02-24  Sam Steingold  <sds@gnu.org>

	* configure (info_help): use ./src/configure to get the list
	of options which specify location of dependencies

2008-02-24  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (GNULIB_CHECKOUT): do not specialize
	on a specific user, one can always use a symlink

2008-02-24  Bruno Haible  <bruno@clisp.org>
